# IndianGDP

./: .flaskenv  Dockerfile  README.md  pyproject.toml
flask_app/: crud_app.py
flask_app/app/: __init__.py  app.db  config.py  models.py  routes.py
flask_app/app/templates/: base.html
migrations/versions/: a001069573a8_.py
