[tool.poetry]
name = "indiangdp"
version = "0.1.0"
description = ""
authors = ["Shreyansh Gautam <shreyansh.24gautam@gmail.com>"]
packages = [
    { include = "app", from = "flask_app" }
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
gnureadline = "^8.0.0"
rich = "^10.11.0"
Flask = "2.2.2"
Flask-SQLAlchemy = "2.5.1"
alembic = "1.8.1"
Flask-Migrate = "2.1.1"
Flask-WTF = "0.14.2"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
Mako = "1.0.7"
click = "8.0.4"
MarkupSafe = "2.1.1"
SQLAlchemy = "1.4.40"
python-dotenv = "^0.20.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
mpld3 = "^0.5.9"
plotly = "^5.13.1"
pandas = "^1.5.3"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pycodestyle = "^2.7.0"
black = {version = "^21.7b0", allow-prereleases = true}
watchdog = "^2.1.3"
PyYAML = "^5.4.1"
argh = "^0.26.2"
mypy = "^0.910"
types-cachetools = "^4.2.0"
pdbpp = "^0.10.3"
click = "8.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "indiangdp.runserver:app"
client = "indiangdp.client:app"
